manifest.yaml
#---------------------------------------------------------------BACKEND---------------------------------------------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokeragebe-deployment
  namespace: kmlbroker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brokeragebe
  template:
    metadata:
      labels:
        app: brokeragebe
    spec:
      containers:
      - name: brokeragebe
        image: nrt.ocir.io/nrcbpbtrtyz0/kmlbrokerbe:${BUILDRUN_HASH}
        imagePullPolicy: Always         
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"           
      imagePullSecrets:
      - name: devops-mlbroker
#---------------------------------------------------------------FRONTEND---------------------------------------------------------------------------------------------
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokerageweb-deployment
  namespace: kmlbroker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brokerageweb
  template:
    metadata:
      labels:
        app: brokerageweb
    spec:
      containers:
      - name: brokerageweb
        image: nrt.ocir.io/nrcbpbtrtyz0/kmlbroker:${BUILDRUN_HASH}
        imagePullPolicy: Always 
        ports:
        - containerPort: 3003
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"        
      imagePullSecrets:
      - name: devops-mlbroker
#------------------------------------------------------------------SERVICE-FRONTEND---------------------------------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: brokeragewebsvc
  namespace: kmlbroker
spec:
  selector:
    app: brokerageweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3003
#------------------------------------------------------------------SERVICE-BACKEND---------------------------------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: brokeragebesvc
  namespace: kmlbroker
spec:
  selector:
    app: brokeragebe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8002
#-------------------------------------------------------------------INGRESS-FRONTEND-------------------------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brokerageweb-ingress
  namespace: kmlbroker
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sinulog.mlhuillier.net
    secretName: net-tls
  ingressClassName: nginx
  rules:
  - host: sinulog.mlhuillier.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: brokeragewebsvc
            port:
              number: 80
#-------------------------------------------------------------------INGRESS-BACKEND-------------------------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brokeragebe-ingress
  namespace: kmlbroker
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - sinulog2025.mlhuillier.net
    secretName: net-tls
  ingressClassName: nginx
  rules:
  - host: sinulog2025.mlhuillier.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: brokeragebesvc
            port:
              number: 80
